--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <p style="color:white;">Automated Fault Detection System, this system would detect any faults in the streetlight
                system and notify the concerned authorities.It would use a combination of sensors to detect any issues and alert the authorities.
                Non functional street light is detect faster using Light dependent resistor (LDR) sensor and it will be send notification to near police station and service engineers WhatsApp.
-              <p style="color: blue;">Learn More</p>
+              <p style="color: rgb(107, 107, 230);">Learn More</p>
 
                 </p>
           </div>
@@ -240,7 +240,7 @@
               to understand and learn the procedures. We approach our idea by developing a website, which is multilingual
                (i.e, the user can view the webpage in their preferable language) and also assist the user
                 with the help of chatbot and map which are integrated in our website to locate the nearby
-                 hospitals in case of any need.<p style="color: blue;">CLICK HERE TO VIEW PROJECT</p>
+                 hospitals in case of any need.<p style="color:rgb(107, 107, 230);">CLICK HERE TO VIEW PROJECT</p>
 
                 </p>
           </div>
